--- a/Practica2css/WebContent/style.css
+++ b/Practica2css/WebContent/style.css
@@ -69,6 +69,10 @@ div.antiguo{
     text-align: center;
 }
 
+div.center{
+    text-align: center;
+}    
+
 img.antes{
     width: 200px;
     height: 150px;
